--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Belajar Panca Indra Manusia | Anindhias Raradhita</title>
+  <title>Rantai Makanan | Anindhias Raradhita</title>
 
 
 
